Rewrite to file loader