@@ -2,8 +2,31 @@ apply plugin: 'java'
 apply plugin: 'application'
 
 mainClassName = "com.company.Main"
-applicationDefaultJvmArgs = ["-Xmx3G","-Xms3G","-server", "-XX:CompileThreshold=10", "-XX:+AggressiveOpts"]
+
+run {
+    args '-help'
+}
+
+compileJava.options.encoding = 'UTF-8'
+
+compileJava {
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+}
+
+repositories {
+    mavenLocal()
+    mavenCentral()
+}
+
+dependencies {
+    compile 'com.google.guava:guava:+'
+    compile 'com.beust:jcommander:1.+'
+    compile 'org.slf4j:slf4j-api:1.+'
+    runtime 'org.slf4j:slf4j-log4j12:1.+'
+    runtime 'log4j:log4j:1.2.+'
+}
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '1.10'
+    gradleVersion = "2.4"
 }
